<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_priceList"
            android:icon="@drawable/pricelist"
            android:title="@string/nav_price_list" />
        <item
            android:id="@+id/nav_Offer"
            android:icon="@drawable/discount"
            android:title="@string/nav_offers" />
        <item
            android:id="@+id/nav_histry"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_histry" />
        <item
            android:id="@+id/nav_aboutUs"
            android:icon="@drawable/ic_aboutus"
            android:title="@string/nav_aboutus" />

        <item
            android:id="@+id/nav_contactUs"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/nav_contactus" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_services"
            android:title="@string/nav_services" />
        <item
            android:id="@+id/nav_Logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/nav_feedback" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />

            <item
                android:id="@+id/nav_termsandcondition"
                android:icon="@drawable/termsandcondition"
                android:title="@string/nav_termsandcondition" />
        </menu>
    </item>

</menu>
