<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FeedbackActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/feedbackFeedback"
        app:titleTextColor="#fff"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBlueJeans"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/edittextfeedback"
                android:hint="@string/feedbackName"
                android:padding="10dp"
                android:layout_marginTop="50dp"/>

            <EditText
                android:id="@+id/editTextContact"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/edittextfeedback"
                android:hint="@string/FeedbackContact"
                android:inputType="number"
                android:maxLength="10"
                android:padding="10dp"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/editTextFeedback"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/edittextfeedback"
                android:gravity="top|left"
                android:hint="@string/feedbackFeedback"
                android:inputType="textMultiLine"
                android:padding="5dp"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittextfeedback"
                android:padding="5dp"
                android:text="@string/feedbackSubmit" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>