<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/login"
            android:padding="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/userIDTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            app:boxStrokeColor="@color/loginPage"
            android:layout_height="wrap_content"
            app:counterTextAppearance="@color/loginPage">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/userIDTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            android:layout_margin="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            app:boxStrokeColor="@color/loginPage"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart ="true"
            app:passwordToggleDrawable="@drawable/icon_visibility"
            app:passwordToggleTint="@color/loginPage">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:background="@color/loginPage"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/registerHere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/notmember"
            android:padding="5dp"
            android:gravity="center"
            android:textSize="15sp"
            />
    </LinearLayout>

</ScrollView>




</LinearLayout>